--- a/AngularJS/views/admin.html
+++ b/AngularJS/views/admin.html
@@ -9,7 +9,7 @@
             <br />
             <br />
             <div class="col-sm-4"><button  type="button" style="width:100%;height:100px;" class="btn btn-primary">Add</button></div>
-            <div class="col-sm-4"><button type="button" style="width:100%;height:100px;"  class="btn btn-danger">Edit</button></div>
+            <div class="col-sm-4"><button ng-click="editDepartments()" type="button" style="width:100%;height:100px;"  class="btn btn-danger">Edit</button></div>
             <div class="col-sm-4"><button ng-click="viewUsers()"type="button" style="width:100%;height:100px;"  class="btn btn-primary">View</button></div>
 
         </div>
